--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ project(vkut VERSION 0.1.0)
 #------------------------------------------------------------------------------
 
 find_package(Vulkan REQUIRED)
+find_package(Threads REQUIRED)
+find_package(glslang CONFIG REQUIRED)
 
 #------------------------------------------------------------------------------
 
@@ -35,6 +37,17 @@ target_include_directories(vkut
 target_link_libraries(vkut
   PUBLIC
     Vulkan::Vulkan
+    glslang::glslang
+    glslang::SPIRV
+    glslang::HLSL
+    glslang::OGLCompiler
+)
+
+#------------------------------------------------------------------------------
+
+set_target_properties(vkut
+  PROPERTIES
+    CXX_STANDARD 17
 )
 
 #------------------------------------------------------------------------------
